--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
       function drawClock() {
         drawFace(ctx, radius);
+        drawNumbers(ctx, radius);
       }
 
       function drawFace(ctx, radius) {
@@ -48,6 +49,24 @@
         ctx.arc(0, 0, radius * 0.1, 0, 2 * Math.PI);
         ctx.fillStyle = "#333";
         ctx.fill();
+      }
+
+      function drawNumbers(ctx, radius) {
+        var ang;
+        var num;
+        ctx.font = radius * 0.15 + "px arial";
+        ctx.textBaseline = "middle";
+        ctx.textAlign = "center";
+        for (num = 1; num < 13; num++) {
+          ang = (num * Math.PI) / 6;
+          ctx.rotate(ang);
+          ctx.translate(0, -radius * 0.85);
+          ctx.rotate(-ang);
+          ctx.fillText(num.toString(), 0, 0);
+          ctx.rotate(ang);
+          ctx.translate(0, radius * 0.85);
+          ctx.rotate(-ang);
+        }
       }
     </script>
   </body>
