move hand clock

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       var radius = canvas.height / 2;
       ctx.translate(radius, radius);
       radius = radius * 0.9;
-      drawClock();
+      //drawClock();
+      setInterval(drawClock, 1000);
 
       function drawClock() {
         drawFace(ctx, radius);
